Complete Excurison page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="resources/css/style.css">
         <title>Excursion</title>
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
         <a href="https://a6a284a3b751448aa74a4e6b3bfc77bb.cc-propeller.cloud/#" >Download Excursion (Coming soon!)</a>
-        
+        <p></p>
+        <video src="resources/videos/excursion.mp4"></video>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="resources/images/camp.webp" alt="campsite">
+        <p></p>
+        <img src="resources/images/phone.webp" alt="phone">
+        <h1>Coming Soon for iPhone and Android</h1>
+        <a href="https://a6a284a3b751448aa74a4e6b3bfc77bb.cc-propeller.cloud/#" >Download Excursion (Coming soon!)</a>
+        <footer>
+            <p>© Excurison</p>
+        </footer>
     </body>
 </html>
