--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="https://a6a284a3b751448aa74a4e6b3bfc77bb.cc-propeller.cloud/#" >Download Excursion (Coming soon!)</a>
         <p></p>
-        <video src="resources/videos/excursion.mp4"></video>
+        <video autoplay muted loop>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         <img src="resources/images/camp.webp" alt="campsite">
